<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C3BBD"
    android:orientation="vertical"
    tools:context=".actividades.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DFDFDF"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/texto_busqueda"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:drawableRight="@mipmap/ic_launcher_round"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/texto_irRegistro"
        android:layout_above="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:onClick="irARegistro"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/texto_irLogin"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="irALogin"/>
    <Button
        android:id="@+id/btn_detalle_lugar"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/texto_irDetalle"
        android:layout_marginEnd="40dp"
        android:layout_above="@+id/btn_registro"
        android:layout_alignStart="@+id/btn_registro"
        android:onClick="irADetalleLugar"/>



</RelativeLayout>