<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".actividades.LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher_round"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/txt_correo"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/txt_contraseña"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/txt_login"
            android:layout_marginEnd="20dp"/>
        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/txt_correo"/>

    </LinearLayout>


</LinearLayout>